<resources>
    <string name="app_name">Final Year Project</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="guard_id">Guard ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="guard_username">Guard Username</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="register_first_time">Register for the First Time</string>
    <string name="activity_location">Abnormal Activity Location:</string>
    <string name="detcted_abnornal">Detected Abnormal Activity:</string>
    <string name="take_action">Take Action</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyAKpjm1TajoAVqvsaGYBmbVh0LbvkDp80E</string>
    <string name="select_feedback">Select Feedback:</string>
    <string name="resolved">Resolved</string>
    <string name="continue_investigate">Continue to Investigate</string>
    <string name="further_action">Require Further Action</string>
    <string name="further_feedback">Further Feedback</string>
    <string name="submit">Submit</string>
    <string name="processing">Processing</string>
    <string name="guards_handled">Guards Handled: </string>
    <string name="call">Call</string>
    <string name="need_more_guards">Need Backup</string>
    <string name="schedule">Schedule</string>
    <string name="filter">Filter:</string>
    <string name="unsolved">Unsolved/Need Backup</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="grant_permission">Turn on permission</string>
    <string name="no_network">No Internet Access!</string>
    <string name="location_permission">Location Permission is not Granted!</string>
    <string name="no_internet_show_cache">No Internet Connection! Showing Cached Data</string>
    <string name="optional">(optional)</string>
</resources>
